--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,6 +1,5 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -30,7 +29,12 @@ dist.jar=${dist.dir}/Lasen.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.activation-1.1.1.jar=C:\\Users\\Khulood  Alyaf3Y\\Downloads\\activation-1.1.1.jar
+file.reference.derby.jar=C:\\Program Files\\Java\\jdk1.8.0_111\\db\\lib\\derby.jar
+file.reference.derbyclient.jar=C:\\Program Files\\Java\\jdk1.8.0_111\\db\\lib\\derbyclient.jar
+file.reference.javax.mail.jar=C:\\Users\\Khulood  Alyaf3Y\\Downloads\\javax.mail.jar
 file.reference.mysql-connector-j-8.0.31.jar=C:\\Users\\horre\\Downloads\\mysql-connector-j-8.0.31\\mysql-connector-j-8.0.31.jar
+file.reference.mysql-connector-java-8.0.27.jar=C:\\Users\\Khulood  Alyaf3Y\\Downloads\\mysql-connector-java-8.0.27\\mysql-connector-java-8.0.27\\mysql-connector-java-8.0.27.jar
 file.reference.mysql-connector-java-8.0.30.jar=C:\\Users\\horre\\Downloads\\mysql-connector-java-8.0.30\\mysql-connector-java-8.0.30\\mysql-connector-java-8.0.30.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
@@ -41,10 +45,16 @@ javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
     ${libs.jpa2-persistence.classpath}:\
     ${file.reference.mysql-connector-java-8.0.30.jar}:\
-    ${file.reference.mysql-connector-j-8.0.31.jar}
+    ${file.reference.mysql-connector-j-8.0.31.jar}:\
+    ${file.reference.mysql-connector-java-8.0.27.jar}:\
+    ${file.reference.derbyclient.jar}:\
+    ${file.reference.derby.jar}:\
+    ${file.reference.activation-1.1.1.jar}:\
+    ${file.reference.javax.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -106,6 +116,7 @@ manifest.custom.codebase=*
 manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${dist.jar}:\
