--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,9 +30,21 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.activation-1.1.1.jar=C:\\Users\\Khulood  Alyaf3Y\\Downloads\\activation-1.1.1.jar
+file.reference.activation-1.1.1.jar-1=C:\\Users\\Rawan\\Downloads\\activation-1.1.1.jar
+file.reference.ara_model-master-arabic=C:\\Users\\Rawan\\Downloads\\ara_model-master\\ara_model-master\\arabic
 file.reference.javax.mail.jar=C:\\Users\\Khulood  Alyaf3Y\\Downloads\\javax.mail.jar
+file.reference.javax.mail.jar-1=C:\\Users\\Rawan\\Downloads\\javax.mail.jar
+file.reference.Khulood__Alyaf3Y-Downloads=C:\\Users\\Khulood  Alyaf3Y\\Downloads
 file.reference.mysql-connector-java-8.0.27.jar=C:\\Users\\Khulood  Alyaf3Y\\Downloads\\mysql-connector-java-8.0.27\\mysql-connector-java-8.0.27\\mysql-connector-java-8.0.27.jar
 file.reference.mysql-connector-java-8.0.30.jar=C:\\Users\\horre\\Downloads\\mysql-connector-java-8.0.30\\mysql-connector-java-8.0.30\\mysql-connector-java-8.0.30.jar
+file.reference.mysql-connector-java-8.0.30.jar-1=C:\\Users\\Rawan\\Downloads\\mysql-connector-java-8.0.30.jar
+file.reference.sphinx4-core-5prealpha-20160628.232526-10.jar=C:\\Users\\horre\\Downloads\\sphinx4-core-5prealpha-20160628.232526-10.jar
+file.reference.sphinx4-core-5prealpha-20160628.232526-10.jar-1=C:\\Users\\Rawan\\JavaFXApplication20\\dist\\lib\\sphinx4-core-5prealpha-20160628.232526-10.jar
+file.reference.sphinx4-core-5prealpha-20160628.232526-10.jar-2=C:\\Users\\Khulood  Alyaf3Y\\Downloads\\sphinx4-core-5prealpha-20160628.232526-10.jar
+file.reference.sphinx4-data-5prealpha-20160628.232535-10.jar=C:\\Users\\horre\\Downloads\\sphinx4-data-5prealpha-20160628.232535-10.jar
+file.reference.sphinx4-data-5prealpha-20160628.232535-10.jar-1=C:\\Users\\Rawan\\JavaFXApplication20\\dist\\lib\\sphinx4-data-5prealpha-20160628.232535-10.jar
+file.reference.sphinx4-data-5prealpha-20160628.232535-10.jar-2=C:\\Users\\Khulood  Alyaf3Y\\Downloads\\sphinx4-data-5prealpha-20160628.232535-10.jar
+file.reference.WSJ_8gau_13dCep_16k_40mel_130Hz_6800Hz.jar=C:\\Users\\Rawan\\Downloads\\sphinx4-0.1alpha-bin\\sphinx4-0.1alpha\\lib\\WSJ_8gau_13dCep_16k_40mel_130Hz_6800Hz.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -44,7 +56,19 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.30.jar}:\
     ${file.reference.mysql-connector-java-8.0.27.jar}:\
     ${file.reference.activation-1.1.1.jar}:\
-    ${file.reference.javax.mail.jar}
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.sphinx4-core-5prealpha-20160628.232526-10.jar}:\
+    ${file.reference.sphinx4-data-5prealpha-20160628.232535-10.jar}:\
+    ${file.reference.sphinx4-core-5prealpha-20160628.232526-10.jar-1}:\
+    ${file.reference.sphinx4-data-5prealpha-20160628.232535-10.jar-1}:\
+    ${file.reference.javax.mail.jar-1}:\
+    ${file.reference.activation-1.1.1.jar-1}:\
+    ${file.reference.mysql-connector-java-8.0.30.jar-1}:\
+    ${file.reference.Khulood__Alyaf3Y-Downloads}:\
+    ${file.reference.sphinx4-core-5prealpha-20160628.232526-10.jar-2}:\
+    ${file.reference.sphinx4-data-5prealpha-20160628.232535-10.jar-2}:\
+    ${file.reference.WSJ_8gau_13dCep_16k_40mel_130Hz_6800Hz.jar}:\
+    ${file.reference.ara_model-master-arabic}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -65,6 +89,7 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.mysql-connector-java-8.0.27.jar=C:\\Users\\Khulood  Alyaf3Y\\Downloads\\mysql-connector-java-8.0.27\\mysql-connector-java-8.0.27\\mysql-connector-java-8.0.27.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
